[2]-Add Some Docs and jacoco Report plugin

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,35 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
+                <configuration>
+                    <excludes>
+<!--                        <exclude>**/ir/alirezaalijani/spring/mail/module/mail/model/**</exclude>-->
+<!--                        <exclude>**/ir/alirezaalijani/spring/mail/module/mail/templates/**</exclude>-->
+<!--                        <exclude>**/ir/alirezaalijani/spring/mail/module/mail/MailSendEvent.class</exclude>-->
+<!--                        <exclude>**/ir/alirezaalijani/spring/mail/module/mail/MailSendListener.class</exclude>-->
+<!--                        <exclude>**/ir/alirezaalijani/spring/mail/module/ModuleApplication.class</exclude>-->
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <!--                        <phase>prepare-package</phase>-->
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
