--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-target/
+target/**
+!target
+!target/mvn-artifact/**
+!target/mvn-artifact
+
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 .mvn/settings.xml
-!target/mvn-artifact/**
+
 ### STS ###
 .apt_generated
 .classpath
