--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,12 @@
         </dependency>
     </dependencies>
 
+<!--    https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-apache-maven-registry-->
     <distributionManagement>
         <repository>
-            <id>internal.repo</id>
-            <name>Temporary Staging Repository</name>
-            <url>file://${project.build.directory}/mvn-artifact</url>
+            <id>github</id>
+            <name>GitHub alirezaalj Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/alirezaalj/spring-mail-module</url>
         </repository>
     </distributionManagement>
 
@@ -79,15 +80,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <altDeploymentRepository>
-                        internal.repo::default::file://${project.build.directory}/mvn-artifact
-                    </altDeploymentRepository>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
